--- a/ci/pipeline-workshop.yml
+++ b/ci/pipeline-workshop.yml
@@ -25,7 +25,7 @@ jobs:
     params:
       manifest: resource-todo-app/manifest.yml
       path: resource-todo-app/
-      current_app_name: todo-apps-ge 
+      current_app_name: todo-apps-ymakihar 
 
 resources:
 
